[gd_scene load_steps=6 format=4 uid="uid://c74rfvx8f2s3i"]

[ext_resource type="Script" uid="uid://2ynpnnnfsh72" path="res://Assets/Scripts/Towers/Lens.gd" id="1_5vrtt"]

[sub_resource type="BoxMesh" id="BoxMesh_vofs5"]
size = Vector3(0.1, 1.4, 1.4)

[sub_resource type="BoxShape3D" id="BoxShape3D_5vrtt"]
size = Vector3(0.001, 1.4, 1.4)

[sub_resource type="BoxShape3D" id="BoxShape3D_vofs5"]
size = Vector3(0.2, 1.4, 0.001)

[sub_resource type="ArrayMesh" id="ArrayMesh_p5kkg"]
_surfaces = [{
"aabb": AABB(-0.050000012, -0.7, -0.6683498, 0.5, 1.4, 1.3366996),
"attribute_data": PackedByteArray("VVVVPwAAAAAt20s/AACAPy3bSz8AAAAAAACAP2k2ej8AAAAAaTZ6PwAAgD/hMrk8//8/PwAAAABJkiQ/AAAAAHiCWj8AAAAAeIJaPwAAAABJkiQ/AAAAAO3Zbj8AAAAAVVVVPwAAAAAAAGA/AAAAAAAAYD8AAIA/AABAPwAAAABJkiQ/AAAAAEmSJD8AAAAAq6oqPgAAAABMk1A+AAAAAKuqKj4AAIA/AABAPwAAAAB6glo/AAAAAEmSJD8AAAAAeoJaPwAAAADs2W4/AAAAAEmSJD8AAAAAq6oqPgAAAACrqio+AACAPwAAAD4AAAAAVVVVPwAAAABVVVU/AACAPy3bSz8AAIA/+yAhPwAAAACzjjw/AAAAALGOPD8AAAAAVVVVPwAAAAAAAGA/AACAP1VVVT8AAIA/eIJaPwAAAAD//z8/AAAAALOOPD8AAAAA7dluPwAAAAB4glo/AAAAALOOPD8AAAAAAAAAAOEyuTwAAIA/4TK5PAAAAABpNno/q6oqPgAAgD9Mk1A+AAAAAEyTUD4AAIA/AAAAPgAAAACrqio+AACAPwAAAD4AAIA/eoJaPwAAAACzjjw/AAAAAAAAQD8AAAAA7NluPwAAAACzjjw/AAAAAHqCWj8AAAAA7dluPwAAAABJkiQ/AAAAAHSjez8AAAAAdaN7PwAAAABJkiQ/AAAAAOzZbj8AAAAAdKN7PwAAAABJkiQ/AAAAAAAAgD8AAAAAAACAPwAAAABJkiQ/AAAAAHWjez8AAAAAAABgPwAAAACrqmo/AAAAAKuqaj8AAIA/q6pqPwAAAABVVXU/AAAAAFVVdT8AAIA/VVV1PwAAAAAAAAAAAAAAAAAAAAAAAIA/AAAAPgAAAAAAAAA+AACAP6uqqj0AAAAAq6oqPQAAAACrqqo9AAAAAKuqqj0AAIA/AAAAAAAAAACrqio9AAAAAKuqKj0AAIA/AABgPwAAAACrqmo/AACAPwAAYD8AAIA/q6pqPwAAAABVVXU/AACAP6uqaj8AAIA/VVV1PwAAAAAAAAAAAACAP1VVdT8AAIA/q6qqPQAAAAAAAAA+AACAP6uqqj0AAIA/dKN7PwAAAADt2W4/AAAAALOOPD8AAAAAAACAPwAAAAB0o3s/AAAAALOOPD8AAAAAdaN7PwAAAAAAAIA/AAAAALOOPD8AAAAA7NluPwAAAAB1o3s/AAAAALOOPD8AAAAAAAAAAAAAAACrqio9AACAPwAAAAAAAIA/q6oqPQAAAACrqqo9AACAP6uqKj0AAIA/"),
"format": 34359738391,
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 120,
"vertex_data": PackedByteArray("xMzMPTMzM78XMRu/0MxMvTMzMz/5GCu/0MxMvTMzM7/5GCu/0MxMvTMzM7/5GCu/0MxMvTMzMz/5GCu/0MxMvTMzM7/5GCs/xMzMPTMzM78XMRu/0MxMvTMzM7/5GCu/otp6PjMzM79Xbf2+otp6PjMzM79Xbf2+0MxMvTMzM7/5GCu/MGK2PjMzM78tM7O+xMzMPTMzM78XMRu/otp6PjMzM79Xbf2+otp6PjMzMz9Xbf2+yMzMPTMzM78XMRs/0MxMvTMzM7/5GCu/0MxMvTMzM7/5GCs/yMzMPTMzM78XMRs/0MxMvTMzM7/5GCs/yMzMPTMzMz8XMRs/yMzMPTMzM78XMRs/qNp6PjMzM79Ubf0+0MxMvTMzM7/5GCu/qNp6PjMzM79Ubf0+LGK2PjMzM78zM7M+0MxMvTMzM7/5GCu/yMzMPTMzM78XMRs/yMzMPTMzMz8XMRs/qNp6PjMzM79Ubf0+xMzMPTMzM78XMRu/xMzMPTMzMz8XMRu/0MxMvTMzMz/5GCu/xMzMPTMzMz8XMRu/0MxMvTMzMz/5GCs/0MxMvTMzMz/5GCu/xMzMPTMzM78XMRu/otp6PjMzMz9Xbf2+xMzMPTMzMz8XMRu/xMzMPTMzMz8XMRu/otp6PjMzMz9Xbf2+0MxMvTMzMz/5GCs/otp6PjMzMz9Xbf2+MGK2PjMzMz8tM7O+0MxMvTMzMz/5GCs/0MxMvTMzMz/5GCs/0MxMvTMzM7/5GCs/0MxMvTMzMz/5GCu/yMzMPTMzMz8XMRs/0MxMvTMzM7/5GCs/0MxMvTMzMz/5GCs/qNp6PjMzM79Ubf0+yMzMPTMzMz8XMRs/qNp6PjMzMz9Ubf0+yMzMPTMzMz8XMRs/0MxMvTMzMz/5GCs/qNp6PjMzMz9Ubf0+qNp6PjMzMz9Ubf0+0MxMvTMzMz/5GCs/LGK2PjMzMz8zM7M+MGK2PjMzM78tM7O+0MxMvTMzM7/5GCu/EjDaPjMzM7+LhTm+FDDaPjMzM7+AhTk+0MxMvTMzM7/5GCu/LGK2PjMzM78zM7M+EjDaPjMzM7+LhTm+0MxMvTMzM7/5GCu/ZmbmPjMzM78AAAAAZmbmPjMzM78AAAAA0MxMvTMzM7/5GCu/FDDaPjMzM7+AhTk+otp6PjMzM79Xbf2+MGK2PjMzM78tM7O+MGK2PjMzMz8tM7O+MGK2PjMzM78tM7O+EjDaPjMzM7+LhTm+EjDaPjMzMz+LhTm+EjDaPjMzM7+LhTm+ZmbmPjMzM78AAAAAZmbmPjMzMz8AAAAAqNp6PjMzM79Ubf0+qNp6PjMzMz9Ubf0+LGK2PjMzM78zM7M+FDDaPjMzM7+AhTk+LGK2PjMzM78zM7M+LGK2PjMzMz8zM7M+ZmbmPjMzM78AAAAAFDDaPjMzM7+AhTk+FDDaPjMzMz+AhTk+otp6PjMzM79Xbf2+MGK2PjMzMz8tM7O+otp6PjMzMz9Xbf2+MGK2PjMzM78tM7O+EjDaPjMzMz+LhTm+MGK2PjMzMz8tM7O+EjDaPjMzM7+LhTm+ZmbmPjMzMz8AAAAAEjDaPjMzMz+LhTm+LGK2PjMzM78zM7M+qNp6PjMzMz9Ubf0+LGK2PjMzMz8zM7M+MGK2PjMzMz8tM7O+EjDaPjMzMz+LhTm+0MxMvTMzMz/5GCs/EjDaPjMzMz+LhTm+ZmbmPjMzMz8AAAAA0MxMvTMzMz/5GCs/ZmbmPjMzMz8AAAAAFDDaPjMzMz+AhTk+0MxMvTMzMz/5GCs/FDDaPjMzMz+AhTk+LGK2PjMzMz8zM7M+0MxMvTMzMz/5GCs/ZmbmPjMzM78AAAAAFDDaPjMzMz+AhTk+ZmbmPjMzMz8AAAAAFDDaPjMzM7+AhTk+LGK2PjMzMz8zM7M+FDDaPjMzMz+AhTk+//8l0SXR/7///4Hagdr/v///gdqB2v+/AAD/f/9/AIAAAP9//38AgAAA/3//fwCA/38AAP///7//fwAA////v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+///8l0SXR/7///zC9ML3/v///zsLOwv+//38AAP///7//fwAA////v/9/AAD///+/2a7/f9ku/798pf9/fSX/v9mu/3/ZLv+//38AAP///7//fwAA////v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+/2a7/f9ku/7/Zrv9/2S7/vzC9/38wPf+///8l0SXR/7///yXRJdH/v///gdqB2v+//3///////7//f///////v/9///////+///8l0SXR/7///87CzsL/v///JdEl0f+//3///////7//f///////v/9///////+//3///////7//f///////v/9///////+/AAD/f/9/AIAAAP9//38AgAAA/3//fwCA2a7/f9ku/798pf9/fSX/v3yl/399Jf+/ML3/fzA9/7/Zrv9/2S7/v87C/3/OQv+//3///////7//f///////v/9///////+//3///////7//f///////v/9///////+//38AAP///7//fwAA////v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+//38AAP///7//fwAA////v/9/AAD///+///8wvTC9/7///82rzav/v///0rHSsf+////Nq82r/7///zSXNJf/v///s56znv+///80lwAAmgud+v9///+wAv//YYUAALACML3/fzA9/7/Owv9/zkL/vyvO/38sTv+/S+H/f0th/78rzv9/LE7/vzHU/38xVP+/nfr/f516/79L4f9/S2H/v8no/3/KaP+///8wvTC9/7///9Kx0rH/v///zsLOwv+////Nq82r/7///7Oes57/v///0rHSsf+///80lwAAmgv//2GFAACwAv//s54AAFkPK87/fyxO/7/Owv9/zkL/vzHU/38xVP+//3///////7//f///////v/9///////+//3///////7//f///////v/9///////+//3///////7//f///////v/9///////+//3///////7//f///////v/9///////+/nfr/f516/7/J6P9/ymj/v///YYVhhf+/S+H/f0th/78x1P9/MVT/v8no/3/KaP+/")
}]

[node name="Lens" type="MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0)
mesh = SubResource("BoxMesh_vofs5")
script = ExtResource("1_5vrtt")

[node name="MainCollider" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="MainCollider"]
shape = SubResource("BoxShape3D_5vrtt")

[node name="LeftCollider" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.7)
collision_layer = 4
collision_mask = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="LeftCollider"]
shape = SubResource("BoxShape3D_vofs5")

[node name="RightCollider" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.7)
collision_layer = 4
collision_mask = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="RightCollider"]
shape = SubResource("BoxShape3D_vofs5")

[node name="CSGBakedMeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("ArrayMesh_p5kkg")
skeleton = NodePath("")
